Fixes issues related to Apache configuration2 migration.